--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </tr>
     </table>
     <hr size="3" />
-    <a href="hobbies.html">Hobbies</a>
+    <a href="Hobbies.html">Hobbies</a>
     <hr size="3" />
     <a href="Socials.html">Contact me</a>
   </body>
