--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Leon's Personal Site</title>
-    <link rel="stylesheet" href="CSS/Style.css" />
+    <link rel="stylesheet" href="/CSS/Style.css" />
   </head>
   <body>
     <table>
